# sparse-maq

./: .clangd  .gitignore  BENCHMARK_REPORT.md  MANIFEST.in  PERFORMANCE_INVESTIGATION_REPORT.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  TODO.md  pyproject.toml  setup.py
benchmarking/: benchmark.py  benchmark_flat_vs_old.py  fit_solver_maq.py  generate_data.py  generate_data_v2.py  profile_sparse_maq.py  run_benchmark_suite.py  run_benchmark_suite_optimized.py  run_maq.py  run_maq_optimized.py  run_sparse_maq.py  test.ipynb
core/src/: Data.hpp  MAQ.h  Solver.hpp  compute_path.hpp  convex_hull.hpp  main.cpp  pipeline.h  preprocess_data.hpp
core/tests/: test_compute_path.cpp  test_convex_hull.cpp  test_e2e.cpp  test_preprocess_data.cpp
scripts/: build_and_test.sh  run_main_cpp.sh  test_memory_leak.py  verify_data.py  verify_data_correctness.py
sparse_maq/: __init__.py  mckp.py  mckpbindings.cpp  mckpbindings.pyx  mckpdefs.pxd
tests/: test_mckp.py
