[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.12",
    "numpy>=2.0",
    "pyarrow>=20.0.0,<21"
]
build-backend = "setuptools.build_meta"

[project]
name = "mckp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=20.0.0,<21",
    "numpy>=2.2.4",
    "polars>=1.27.1",
]
