[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.12",
    "numpy>=2.0",
    "pyarrow>=20.0.0,<21"
]
build-backend = "setuptools.build_meta"

[project]
name = "sparse_maq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=20.0.0,<21",
    "numpy>=2.2.4",
    "polars>=1.27.1",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
benchmarking = [
    "maq",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
maq = { git = "https://github.com/grf-labs/maq.git", subdirectory = "python-package", rev = "py0.2.2" }

[tool.uv.extra-build-dependencies]
maq = ["numpy>=2.0"]
